--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -1,69 +1,23 @@
 
 \cleardoublepage
 %\renewcommand{\bibname}{Bibliografía}
-\addcontentsline{toc}{chapter}{\textsc{BIBLIOGRAFÍA}}%para  que aparezca en la tabla de cotenidos
+%\addcontentsline{toc}{chapter}{\textsc{BIBLIOGRAFÍA}}%para  que aparezca en la tabla de cotenidos
+% ------------------------------------------------------------------------
+% Bibliografía
+% ------------------------------------------------------------------------
+%\printbibliography[heading=bibintoc,title={BIBLIOGRAFÍA},omitnumbers=true]
+% ------------------------------------------------------------------------
 %\bibliographystyle{unsrt}
 %\bibliographystyle{plain}
-\bibliographystyle{apalike}
+%\bibliographystyle{apalike}
 %\bibliographystyle{acm}
 %\bibliographystyle{ksfh_nat}
 %\bibliographystyle{jtbnew}
-\bibliography{Tesis}
+%\bibliography{Tesis.bib}
+%\bibliographystyle{plainnat}
+%\addbibresource{Tesis.bib}
 
 %Archivo con las referencias bibliograficas, creado en JabRef (o manualmente)
-
-% \cleardoublepage
-
-% \renewcommand{\bibname}{Bibliografía}
-
-% \nocite{Olgac2015B}
-% \nocite{Rayleigh1878B}
-% \nocite{Rayleigh1896B}
-% \nocite{Olgac2002B}
-% \nocite{Evesque2000B}
-% \nocite{Rijke1859B}
-% \nocite{ImprovementsB}
-% \nocite{Comb_prob_2008B}
-% \nocite{Gelbert2012B}
-% \nocite{Kopitz2008B}
-% \nocite{Fleifil1996B}
-% \nocite{Sharp1984B}
-% \nocite{Kull1991B}
-% \nocite{Youngs1984B}
-% \nocite{Read1984B}
-% \nocite{Molares2004B}
-% \nocite{Gretar1988B}
-% \nocite{Hester1996B}
-% \nocite{Dowling2005B}
-% \nocite{Ogata2004B}
-% \nocite{Rekasius1980B}
-% \nocite{Candel2002B}
-% \nocite{SumaKronecker1978B}
-% \nocite{Fazelinia2007B}
-% \nocite{Rudy2016B}
-% \nocite{Sipahi2005B}
-% \nocite{Sipahi2003B}
-% \nocite{Olgac2016_Rijke_tubeB}
-% \nocite{Umut2015B}
-% \nocite{Olgac2004_NTDSB}
-% \nocite{Sipahi_libroB}
-% \nocite{Rijke_modeling_Astrom2015B}
-% \nocite{Filipovic2002B}
-% \nocite{matveev2003B}
-% \nocite{RAUN1993B}
-% \nocite{CARVALHO1989B}
-% \nocite{mounier2009B}
-
-
-% \addcontentsline{toc}{chapter}{\textsc{Bibliografía}}%para  que aparezca en la tabla de cotenidos
-
-% %\bibliographystyle{unsrt}
-% %\bibliographystyle{plain}
-% %\bibliographystyle{apalike}
-% %\bibliographystyle{acm}
-% %\bibliographystyle{jtbnew}
-% \bibliographystyle{rusnat}
-% \bibliography{Proyecto_TAIB.bib}
-% %Archivo con las referencias bibliograficas, creado en JabRef (o manualmente)
-
-
+% ------------------------------------------------------------------------
+% Librería que permite manipular el formato de bibliografía
+% ------------------------------------------------------------------------
