--- a/Introduccion.tex
+++ b/Introduccion.tex
@@ -7,8 +7,8 @@
 \markright{Introducción}
 \addcontentsline{toc}{chapter}{INTRODUCCIÓN}%para que aparezca en la tabla de contenidos
 \label{Cap:Introduccion}
-Actualmente, el Grupo de Investigación en Relatividad y Gravitación (GIRG) y el Grupo Halley de la Universidad Industrial de Santander están desarrollando el Telescopio de Muones (MuTe), el cual será instalado en el volcán  Cerro Machín (Tolima, Colombia)~\citep{Mute_oficial}. MuTe está conformado por un hodoscopio de barras centelladoras, en cuyos extremos están instalados fotomultiplicadores de silicio (SiPMs, por sus siglas en inglés) que se encargan de detectar los fotones generados durante el proceso de centelleo. Los  SiPM son actualmente una alternativa a los detectores de fotones tradicionales, como los tubos fotomultiplicadores~\citep{Intro_SIPM_Sensl}. \\ \\
-Los SiPMs están conformados por una matriz de fotodiodos de avalancha que operan en modo Geiger~\citep{Sipm_S13360_1350CS_datasheet}, son compactos ($< 10~mm^2$), tienen una rápida respuesta, alta ganancia ($\sim 10^6$) y bajo voltaje de operación($ < 80~\mbox{V}$); de ahí que han tomado tanta importancia en aplicaciones científicas e industriales \citep{Blue_SIPM}, como en el campo de imágenes médicas \citep{SiPM_PET,SiPM_3D_img}, biofotónica \citep{SiPM_bio,SiPM_bio2}, LiDAR \citep{SiPM_Lidar,SiPM_3D_img} y física de altas energías~\citep{minimute,Mute_oficial}.\\  \\%Sin embargo, su principal desventaja es la dependencia de la temperatura~\citep{Intro_SIPM_Sensl}.\\ \\
+Actualmente, el Grupo de Investigación en Relatividad y Gravitación (GIRG) y el Grupo Halley de la Universidad Industrial de Santander están desarrollando el Telescopio de Muones (MuTe), el cual será instalado en el volcán  Cerro Machín (Tolima, Colombia)~\footcite{Mute_oficial}. MuTe está conformado por un hodoscopio de barras centelladoras, en cuyos extremos están instalados fotomultiplicadores de silicio (SiPMs, por sus siglas en inglés) que se encargan de detectar los fotones generados durante el proceso de centelleo. Los  SiPM son actualmente una alternativa a los detectores de fotones tradicionales, como los tubos fotomultiplicadores~\footcite{Intro_SIPM_Sensl}. \\ \\
+Los SiPMs están conformados por una matriz de fotodiodos de avalancha que operan en modo Geiger~\footcite{Sipm_S13360_1350CS_datasheet}, son compactos ($< 10~mm^2$), tienen una rápida respuesta, alta ganancia ($\sim 10^6$) y bajo voltaje de operación($ < 80~\mbox{V}$); de ahí que han tomado tanta importancia en aplicaciones científicas e industriales \footcite{Blue_SIPM}, como en el campo de imágenes médicas \footcite{SiPM_PET,SiPM_3D_img}, biofotónica \footcite{SiPM_bio,SiPM_bio2}, LiDAR \footcite{SiPM_Lidar,SiPM_3D_img} y física de altas energías~\footcite{minimute,Mute_oficial}.\\  \\%Sin embargo, su principal desventaja es la dependencia de la temperatura~\footcite{Intro_SIPM_Sensl}.\\ \\
  En el volcán Cerro Machín la temperatura varía de 8 a 25 $^{\circ}$C, teniendo en cuenta que las características ópticas y eléctricas de los SiPMs utilizados en MuTe, presentan una fuerte dependencia de la temperatura, y que en las hojas de datos el fabricante solo especifica estas características para una temperatura de 25 $^{\circ}$C, es necesario caracterizar estos parámetros en función de la temperatura. \\ \\  
 Para realizar el proceso de caracterización se diseñaron e implementaron tres módulos electrónicos. El primer módulo es un sistema de control de temperatura PID basado en dispositivos Peltier, que permite generar un entorno de temperatura controlada en el rango de $0$ a $50~^\circ C$. El segundo módulo es un circuito para  medición de corrientes en el rango de 10 nA a 1 $\mu$A utilizando una topología tipo \textit{shunt}. Finalmente, el tercer módulo es una fuente de luz pulsada de 470 nm y ancho de pulso menores a 10 ns. Para la caracterización del voltaje de ruptura en función de la temperatura se utilizan los módulos 1 y 2, mientras que para la caracterización del ruido se utilizan los módulos 1 y 3.\\ \\
 El contenido de este libro, se estructura de la síguete manera: en el primer capítulo se expone el proyecto MuTe, en el segundo capítulo, se estudia la unión PN, los fotodiodos de  avalancha, los fotomultiplicadores de silicio y sus parámetros de rendimiento. En el tercer capítulo se abordan los módulos electrónicos desarrollados y se hace una descripción detallada de los mismos. En el cuarto capítulo se muestran los resultados del proceso de caracterización del voltaje de ruptura y el ruido para dos SiPMs. Finalmente, en los los capítulos 5 y 6 se realizan las conclusiones y recomendaciones para trabajos futuros.   
