--- a/Tesis.bib
+++ b/Tesis.bib
@@ -199,7 +199,7 @@
 @phdthesis{Tesis_adriana,
     title = {{Estimaci{\'{o}}n de la respuesta generada por el detector MuTe al paso de part{\'{i}}culas cargadas}},
     year = {2018},
-    author = {V{\'{a}}squez, Adriana},
+    author = {V{\'{A}}SQUEZ, Adriana},
     school = {Universidad Industrial de Santander}
 }
 
